--- a/style.css
+++ b/style.css
@@ -1,9 +1,29 @@
-#container {
-    border: solid red 2px;
-    margin: 0;
-    padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap');
+
+h1, .dickhead {
+    font-size: 48px;
+    font-family: 'Delicious Handrawn', cursive;
+    margin: 0px auto;
+    display: flex;
+    justify-content: center;
+}
+
+#header {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center; /* Center items horizontally */
+  }
+
+#mid-container {
+    border: solid black 5px;
+    max-width: 500px; /* Set the maximum width of the container */
+    max-height: 500px;
     display: flex;
     flex-direction: column;
+    margin: 5px auto;
+    justify-content: center;
   }
   
   .row {
@@ -14,10 +34,61 @@
   }
   
   .cell {
-    border: solid rgba(0, 0, 0, 0.25) 1px;
+    border: solid rgba(0, 0, 0, 0.1) 1px;
     flex: 1; /* Expand to fill available space */
     aspect-ratio: 1; /* Maintain a square aspect ratio */
     margin: 0;
     padding: 0;
   }
   
+
+.button-50 {
+  appearance: button;
+  background-color: #000;
+  background-image: none;
+  border: 1px solid #000;
+  border-radius: 4px;
+  box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: 'Delicious Handrawn', cursive;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 20px;
+  margin: 0 5px 10px 0;
+  overflow: visible;
+  padding: 6px 10px;
+  text-align: center;
+  text-transform: none;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.button-50:focus {
+  text-decoration: none;
+}
+
+.button-50:hover {
+  text-decoration: none;
+}
+
+.button-50:active {
+  box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
+  outline: 0;
+}
+
+.button-50:not([disabled]):active {
+  box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 384px) {
+  .button-50 {
+    padding: 12px 50px;
+  }
+}
